<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.intervalcalculator.ui.home.Part1Fragment"
        android:label="@string/title_part1"
        tools:layout="@layout/fragment_part1" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.intervalcalculator.ui.dashboard.DashboardFragment"
        android:label="@string/title_part2"
        tools:layout="@layout/fragment_part2" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.intervalcalculator.ui.notifications.NotificationsFragment"
        android:label="@string/title_part3"
        tools:layout="@layout/fragment_part3" />
</navigation>