<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context=".ui.part2.Part2Fragment">

    <TextView
        android:id="@+id/descriptionPart1"
        style="@style/LabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_part2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMatrixA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionPart1">

        <TextView
            android:id="@+id/title11"
            style="@style/LabelDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="A = ("
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etInt1Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="55dp"
            android:layout_marginStart="@dimen/margin_small"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/title11"
            app:layout_constraintStart_toEndOf="@id/title11"
            app:layout_constraintTop_toTopOf="@id/title11" />

        <TextView
            android:id="@+id/title12"
            style="@style/LabelDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/two_dots"
            app:layout_constraintBottom_toBottomOf="@id/etInt1Start"
            app:layout_constraintStart_toEndOf="@id/etInt1Start"
            app:layout_constraintTop_toTopOf="@id/etInt1Start" />

        <EditText
            android:id="@+id/etInt1End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="55dp"
            android:layout_marginStart="@dimen/margin_small"
            android:inputType="numberDecimal|numberSigned"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/etInt1Start"
            app:layout_constraintStart_toEndOf="@id/title12"
            app:layout_constraintTop_toTopOf="@id/etInt1Start" />

        <TextView
            android:id="@+id/title13"
            style="@style/LabelDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/brace_end"
            app:layout_constraintBottom_toBottomOf="@id/title11"
            app:layout_constraintStart_toEndOf="@id/etInt1End"
            app:layout_constraintTop_toTopOf="@id/title11" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_medium"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/arvo"
        android:text="Clear"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/layoutMatrixA"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnFindSolution"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_medium"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/arvo"
        android:text="Calculate"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutMatrixA"
        />

    <View
        android:id="@+id/separatorResult"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnFindSolution"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/separatorResult" />

</androidx.constraintlayout.widget.ConstraintLayout>